test-resources/invalid-project/src/main/java/test/group/id/LTRO.java
package test.group.id;

/**
 * ‭
 * Bidi characters above
 */
public class LTRO
{
    public static void main( String[] args )
    {
        System.out.println( "Hello World!" );
    }
}
